<resources>
    <string name="app_name">ConcentrationGameApp</string>

    <string name="home_Settings_Button">Settings</string>

    <string name="home_Play_Button">Play</string>

    <string name="home_High_Scores_Button">High Scores</string>

    <string name="home_Exit_Button">Exit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="new_Game_Button">New Game</string>

    <string name="end_Game_Button">End Game</string>

    <string name="tryAgain_Button">Try Again</string>

    <string name="onOffMusic">Toggle Music</string>

    <string name="HomeLogoDescription">Concentration. The Logo for the application displayed on the home scree.</string>
    <string name="tile_count">Tile count:</string>
    <string name="high_score_1">1. Score 1 – 8</string>
    <string name="high_score_2">2. Score 2 – 6</string>
    <string name="high_score_3">3. Score 3 – 4</string>
    <string name="teamName">Team Goofy Goobers</string>
    <string name="back">Back</string>
    <string name="tile_count2">Tile count</string>
    <string name="card_back">Card back</string>
    <string name="card_background">Card background</string>
    <string name="reset">Reset</string>
    <string name="no_high_scores">No high scores.</string>
    <string name="high_score">%1d. %2s</string>
    <string name="score_label">Score: %1d</string>
    <string name="tile_count_dialog">"      %1d tiles"</string>
    <string name="plus_score">+ 2</string>
    <string name="minus_score">- 1</string>
    <string name="incorrect_pair_toast">Incorrect pair! Press the try again button to try again.</string>
    <string name="you_won">"You won!"</string>

    <string name="highscoreTittle"> The Leaderboard </string>

</resources>